--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -20,6 +20,10 @@
         android:id="@+id/fifth"
         android:title="@string/fifthItem"
         android:onClick="fifthOnClick" />
+    <item
+        android:id="@+id/sixth"
+        android:title="@string/sixthItem"
+        android:onClick="sixthOnClick" />
 
 
 </menu>
